fazendo a listagem e o cadastro de carros e pedidos

--- a/cadastro-carro.html
+++ b/cadastro-carro.html
@@ -19,24 +19,30 @@
             <a href="lista-pedidos.html">PEDIDOS</a>
         </nav>
     </header>
-    <h1>CADASTRO DE CLIENTE</h1>
+    <h1>CADASTRO CARRO</h1>
     <div class="container-formulario">
         <form action="">
-            <label for="nome">
-                Nome
+            <label for="marca">
+                Marca
                 <br>
-                <input type="text" name="input-nome-cliente" placeholder="Nome completo" required>
+                <input type="text" name="input-marca-carro" placeholder="Insira a marca do carro" required>
             </label>
-            <label for="cpf">
-                CPF
+            <label for="modelo">
+                 Modelo
                 <br>
-                <input type="number" name="input-cpf-cliente" placeholder="Informe o CPF" required>
+                <input type="text" name="input-modelo-carro" placeholder="Insira o modelo do carro" required>
             </label>
-            <label for="telefone">
-                Telefone
+            <label for="ano de FABRICAÇÃO">
+                Ano fabricação
                 <br>
-                <input type="number" name="input-telefone-cliente" placeholder="Informe o Telefone" required>
+                <input type="number" name="input-ano-fabricação" placeholder="Insira o ano de fabricação do carro" required>
             </label>
+            <label for="cor">
+                Cor
+                <br>
+                <input type="text" name="input-cor-principal-carro" placeholder="Insira a cor principal do carro" required>
+            </label>
+
 
             <input type="button" value="CADASTRAR">
         </form>
