--- a/cadastro-pedido.html
+++ b/cadastro-pedido.html
@@ -22,20 +22,26 @@
     <h1>CADASTRO DE CLIENTE</h1>
     <div class="container-formulario">
         <form action="">
-            <label for="nome">
-                Nome
+            <label for="cliente">
+                Cliente
                 <br>
-                <input type="text" name="input-nome-cliente" placeholder="Nome completo" required>
+                <input type="text" name="input-nome-cliente" placeholder="Insira o nome do cliente" required>
             </label>
-            <label for="cpf">
-                CPF
+            <label for="carro">
+                Carro
                 <br>
-                <input type="number" name="input-cpf-cliente" placeholder="Informe o CPF" required>
+                <input type="text" name="input-carro-cliente" placeholder="Insira o carro" required>
             </label>
-            <label for="telefone">
-                Telefone
+            <label for="data pedido">
+                Data do pedido
                 <br>
-                <input type="number" name="input-telefone-cliente" placeholder="Informe o Telefone" required>
+                <input type="date" name="input-data-pedido" placeholder="Insira a data do pedido" required>
+            </label>
+
+            <label for="valor total pedido">
+              Valor Total do Pedido
+                <br>
+                <input type="text" name="input-valor-total-pedido" placeholder="Insira o valor total do pedido" required>
             </label>
 
             <input type="button" value="CADASTRAR">
