--- a/index.html
+++ b/index.html
@@ -4,8 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EliteCar Multimarcas</title>
+    <link rel="stylesheet" href="css/navegacao.css">
+    <link rel="stylesheet" href="css/principal.css">
+    <link rel="stylesheet" href="css/inicio.css">
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <a href="lista-clientes.html">CLIENTES</a>
+            <a href="lista-carro.html">CARROS</a>
+            <a href="lista-pedidos.html">PEDIDOS</a>
+        </nav>
+    </header>
+
+    <div class="painel-principal">
+        <div class="container-esquerdo">
+            <img src="assets/images/elitecar-logo.png" alt="" srcset="" class="logotipo">
+            <h5>Seja bem-vindo a EliteCar Multimarcas</h5>
+            <h6>Para começar a usar o sistema, escolha uma das
+                opções nos menus acima</h6>
+        </div>
+        <div class="container-direito">
+            <img src="assets/images/elitecar-banner1.png" alt="" class="carros">
+            <img src="assets/images/elitecar-banner2.png" alt="" class="carros">
+        </div>
+    </div>
 </body>
 </html>
