--- a/lista-carro.html
+++ b/lista-carro.html
@@ -1,9 +1,10 @@
+</html>
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cadastro Clientes</title>
+    <title>CARROS</title>
     <!-- CSS -->
     <link rel="stylesheet" href="css/principal.css">
     <link rel="stylesheet" href="css/navegacao.css">
@@ -20,11 +21,11 @@
     <div class="painel">
         <div class="esquerda">
             <div>
-                <a href="/cadastro-cliente.html">NOVO CLIENTE</a>
+                <a href="/cadastro-carro.html">NOVO CARRO </a>
             </div>
         </div>
         <div class="meio">
-            <h1>CLIENTES</h1>
+            <h1>CARROS</h1>
         </div>
         <div class="direita"></div>
     </div>
@@ -32,19 +33,21 @@
         <table>
             <thead>
                 <tr>
-                    <th>ID CLIENTE</th>
-                    <th>NOME</th>
-                    <th>CPF</th>
-                    <th>TELEFONE</th>
-                    <th>AÇÕES</th>
+                    <th>ID PEDIDO</th>
+                    <th>MARCA</th>
+                    <th>MODELO</th>
+                    <th>ANO DE FABRICAÇÃO</th>
+                    <th>COR PRINCIPAL</th>
+                    <th>Ações</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
                     <td>1</td>
-                    <td>APARECIDA EVELYN ISABELLE DA ROCHA</td>
-                    <td>664.851.780-82</td>
-                    <td>(96) 98230-6325</td>
+                    <td>Toyota</td>
+                    <td>Hiulux GR-Sport</td>
+                    <td>2024</td>
+                    <td>PRETO</td>
                     <td>
                         <img src="assets/icons/pencil-square.svg" alt="editar">
                         <img src="assets/icons/trash-fill.svg" alt="excluir">
@@ -52,9 +55,10 @@
                 </tr>
                 <tr>
                     <td>2</td>
-                    <td>SEVERINO GERALDO FERNANDES</td>
-                    <td>353.240.796-50</td>
-                    <td>(91) 98158-9367</td>
+                    <td>MERCEDES BENZ</td>
+                    <td>CLA 200 PROGRESSIVE</td>
+                    <td>2022</td>
+                    <td>CINZA ESPACIAL</td>
                     <td>
                         <img src="assets/icons/pencil-square.svg" alt="editar">
                         <img src="assets/icons/trash-fill.svg" alt="excluir">
@@ -62,9 +66,10 @@
                 </tr>
                 <tr>
                     <td>3</td>
-                    <td>JAQUELINE AMANDA ADRIANA MARTINS</td>
-                    <td>102.173.781-02</td>
-                    <td>(84) 99548-7514</td>
+                    <td>BMW</td>
+                    <td>X6 M COMPETITION</td>
+                    <td>2023</td>
+                    <td>AZUL CINTILANTE</td>
                     <td>
                         <img src="assets/icons/pencil-square.svg" alt="editar">
                         <img src="assets/icons/trash-fill.svg" alt="excluir">
