--- a/lista-pedidos.html
+++ b/lista-pedidos.html
@@ -1,30 +1,22 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cadastro Clientes</title>
-    <!-- CSS -->
-    <link rel="stylesheet" href="css/principal.css">
-    <link rel="stylesheet" href="css/navegacao.css">
-    <link rel="stylesheet" href="css/listagem.css">
-</head>
 <body>
     <header>
         <nav>
             <a href="lista-clientes.html">CLIENTES</a>
             <a href="lista-carro.html">CARROS</a>
-            <a href="lista-pedidos.html">PEDIDOS</a>
+            <a href="/lista-pedidos.html">PEDIDOS</a>
         </nav>
+        <link rel="stylesheet" href="css/principal.css">
+        <link rel="stylesheet" href="css/navegacao.css">
+        <link rel="stylesheet" href="css/listagem.css">
     </header>
     <div class="painel">
         <div class="esquerda">
             <div>
-                <a href="/cadastro-cliente.html">NOVO CLIENTE</a>
+                <a href="/cadastro-pedido.html">NOVO PEDIDO </a>
             </div>
         </div>
         <div class="meio">
-            <h1>CLIENTES</h1>
+            <h1>Pedidos</h1>
         </div>
         <div class="direita"></div>
     </div>
@@ -32,19 +24,21 @@
         <table>
             <thead>
                 <tr>
-                    <th>ID CLIENTE</th>
-                    <th>NOME</th>
-                    <th>CPF</th>
-                    <th>TELEFONE</th>
-                    <th>AÇÕES</th>
+                    <th>ID PEDIDO</th>
+                    <th>CLIENTE</th>
+                    <th>CARRO</th>
+                    <th>DATA DO PEDIDO</th>
+                    <th>VALOR TOTAL</th>
+                    <th>Ações</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
                     <td>1</td>
                     <td>APARECIDA EVELYN ISABELLE DA ROCHA</td>
-                    <td>664.851.780-82</td>
-                    <td>(96) 98230-6325</td>
+                    <td>Hiulux GR-Sport</td>
+                    <td>12/02/2024</td>
+                    <td>R$ 450.000,00</td>
                     <td>
                         <img src="assets/icons/pencil-square.svg" alt="editar">
                         <img src="assets/icons/trash-fill.svg" alt="excluir">
@@ -53,8 +47,9 @@
                 <tr>
                     <td>2</td>
                     <td>SEVERINO GERALDO FERNANDES</td>
-                    <td>353.240.796-50</td>
-                    <td>(91) 98158-9367</td>
+                    <td>CLA 200 PROGRESSIVE</td>
+                    <td>05/06/2024</td>
+                    <td>R$ 1.250.000,00</td>
                     <td>
                         <img src="assets/icons/pencil-square.svg" alt="editar">
                         <img src="assets/icons/trash-fill.svg" alt="excluir">
@@ -62,9 +57,10 @@
                 </tr>
                 <tr>
                     <td>3</td>
-                    <td>JAQUELINE AMANDA ADRIANA MARTINS</td>
-                    <td>102.173.781-02</td>
-                    <td>(84) 99548-7514</td>
+                    <td>JAQUELINE AMANDA ADRIANA</td>
+                    <td>X6 M COMPETITION</td>
+                    <td>27/11/2023</td>
+                    <td>R$ 872.163,57</td>
                     <td>
                         <img src="assets/icons/pencil-square.svg" alt="editar">
                         <img src="assets/icons/trash-fill.svg" alt="excluir">
